@@ -843,3 +843,26 @@ function changeForceInsertNormalCookie(input) {
   createCookie('pmForceInsertNormal', false);
   }
 }
+
+$(document).ready(function () {
+
+budgetRelated = $('input#budgetRelated')
+if (budgetRelated.length) {
+budgetInfos = $('#archetypes-fieldname-budgetInfos');
+if (!budgetRelated[0].checked) {
+  budgetInfos.hide();
+}
+
+budgetRelated.on('click', function() {
+  if (this.checked) {
+    budgetInfos.hide().fadeIn("fast");
+  }
+  else {
+    budgetInfos.fadeOut("fast", function() {
+    $(this).hide();
+  });
+};});
+
+}
+
+});
